--- a/app.yaml
+++ b/app.yaml
@@ -1,3 +1,20 @@
 runtime: python310
 env: flex
 entrypoint: gunicorn -b :$PORT main:app 
+jobs:
+  test:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v3
+
+      - name: Set up Node.js (example if it's a Node.js project)
+        uses: actions/setup-node@v3
+        with:
+          node-version: '16'
+
+      - name: Install dependencies
+        run: npm install
+        
+      - name: Run tests
+        run: npm test
