--- a/app.yaml
+++ b/app.yaml
@@ -1,6 +1,12 @@
-runtime: python310
-env: flex
-entrypoint: gunicorn -b :$PORT main:app 
+name: CI - Tests
+
+on:
+  push:
+    branches: [ "main" ]
+  pull_request:
+    branches: [ "main" ]
+  workflow_dispatch:
+
 jobs:
   test:
     runs-on: ubuntu-latest
@@ -8,13 +14,15 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v3
 
-      - name: Set up Node.js (example if it's a Node.js project)
-        uses: actions/setup-node@v3
+      - name: Set up Python
+        uses: actions/setup-python@v4
         with:
-          node-version: '16'
+          python-version: "3.10"
 
       - name: Install dependencies
-        run: npm install
-        
+        run: |
+          python -m pip install --upgrade pip
+          pip install -r requirements.txt
+
       - name: Run tests
-        run: npm test
+        run: pytest
