--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -10,7 +10,6 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v3
 
-
   build-docker-image-and-push:
     needs: test
     runs-on: ubuntu-latest
@@ -34,10 +33,22 @@ jobs:
       - name: Build and tag Docker image
         run: |
           docker build -t eyabelkadhi/devops:latest .
-         
 
       - name: Push Docker image
         run: |
-          # docker push ${{ secrets.DOCKER_USERNAME }}/myapp:${{ github.sha }}
-          # docker push ${{ secrets.DOCKER_USERNAME }}/myapp:latest
           docker push eyabelkadhi/devops:latest
+
+  deploy:
+    needs: build-docker-image-and-push # Correct reference
+    runs-on: ubuntu-latest
+    steps:
+      - name: Log in to Azure
+        uses: azure/login@v1
+        with:
+          creds: ${{ secrets.AZURE_CREDENTIALS }}
+
+      - name: Deploy to Azure Web App
+        uses: azure/webapps-deploy@v2
+        with:
+          app-name: testlab
+          images: 'eyabelkadhi/devops:latest'
